{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 11,
  "lineage": "0629c3f1-8d36-5b91-1153-cfcf83931735",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oh-cluster-1",
      "each": "list",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-0f91916458c4df02b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f91916458c4df02b",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-00b5570b32680bb7f",
            "private_dns": "ip-172-31-33-130.us-east-2.compute.internal",
            "private_ip": "172.31.33.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0016b784405a2d5ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "tf-oh-cl1-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08db9e98d0cfc19e0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_ohio"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-03ba17df35e233e00",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03ba17df35e233e00",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-012ae3f4213776ec1",
            "private_dns": "ip-172-31-45-68.us-east-2.compute.internal",
            "private_ip": "172.31.45.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0638a90e7ee84f08e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "tf-oh-cl1-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08db9e98d0cfc19e0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vg-cluster-1",
      "each": "list",
      "provider": "provider.aws.virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-091c2b2bfa2e1ab26",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-091c2b2bfa2e1ab26",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-09f95823292a9ace3",
            "private_dns": "ip-172-31-87-45.ec2.internal",
            "private_ip": "172.31.87.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ade643bffc09d152",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "tf-vg-cl1-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007fd4c0ac90ffa66"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_virginia"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-092123e8dca35e3a1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-092123e8dca35e3a1",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-041019fc2bb50c472",
            "private_dns": "ip-172-31-84-100.ec2.internal",
            "private_ip": "172.31.84.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09b9ebbb16ccb711b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "tf-vg-cl1-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007fd4c0ac90ffa66"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vg-server-images",
      "provider": "provider.aws.virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-06e05eb37093180ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06e05eb37093180ff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb19a6c954da9b6f",
            "private_dns": "ip-172-31-24-193.ec2.internal",
            "private_ip": "172.31.24.193",
            "public_dns": "ec2-34-229-86-0.compute-1.amazonaws.com",
            "public_ip": "34.229.86.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-073bd99ab448185c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-db3ee496",
            "tags": {
              "Name": "tf-vg-server-images"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007fd4c0ac90ffa66"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_ohio",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807624821827:security-group/sg-08db9e98d0cfc19e0",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-08db9e98d0cfc19e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4924e122"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_virginia",
      "provider": "provider.aws.virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-007fd4c0ac90ffa66",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-007fd4c0ac90ffa66",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    }
  ]
}